# pretix-cliques

./: LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
pretix_cliques/: __init__.py  apps.py  checkoutflow.py  models.py  signals.py  tasks.py  urls.py  views.py
pretix_cliques/locale/: django.pot
pretix_cliques/locale/de_Informal/LC_MESSAGES/: django.po
pretix_cliques/migrations/: 0001_initial.py  0002_clique_created.py  0003_orderraffleoverride.py
pretix_cliques/templates/pretix_cliques/: checkout_clique.html  checkout_confirm.html  control_delete.html  control_detail.html  control_list.html  control_order_clique_change.html  control_order_info.html  control_raffle.html  control_raffle_base.html  control_raffle_reject.html  control_stats.html  fragment_cliqueform.html  order_clique_change.html  order_info.html
pretix_cliques/templatetags/: clique_tags.py
