[project]
name = "pretix-cliques"
dynamic = ["version"]
description = "This pretix plugin adds the cliques feature"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [

]

[project.entry-points."pretix.plugin"]
pretix_cliques = "pretix_cliques:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretix/pretix-cliques"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_cliques.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
